# phanim

./: .gitignore  404.html  README.md  __init__.py  animate.py  camera.py  field.py  fourier_optics.py  functions.py  index.html  info.py  intro.py  mkdocs.yml  objects.inv  particles.py  phobject.py  phobjects.py  physics.py  pyproject.toml  quickplot.py  requirements.txt  screen.py  shapes.py  test.py  ui.py  window.py
Animation/: index.html
Getting Started/: index.html
Installation/: index.html
Recording/: index.html
Reference/: index.html
Screen/: index.html
doc generation/: index.html
docs/: Animation.md  Getting Started.md  Installation.md  Recording.md  Reference.md  Screen.md  doc generation.md  index.md
examples/: animationDemo.py  bezier.py  boids.py  box.py  doublePendulum.py  gas.py  graph.py  gravity.py  interactiveGraph.py  plot.py  readmeExample.py  rotatingBeam.py  softBody.py  test.py  transformDemo.py  triplePendulum.py  vectorfield.py
phanim/: __init__.py  animate.py  camera.py  color.py  curve.py  field.py  functions.py  graph.py  group.py  particles.py  phobject.py  phobjects.py  screen.py  shapes.py  text.py  ui.py
src/phanim/: __init__.py  animate.py  base_phobject.py  camera.py  color.py  curve.py  field.py  functions.py  graph.py  group.py  particles.py  phobject.py  physics_solver.py  renderer.py  screen.py  screen_recorder.py  shapes.py  soft_body.py  special_phobject.py  text.py  ui.py
