# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phanim"
version = "1.1.0"
description = "A physics rendering engine"
readme = "README.md"
authors = [{ name = "Quirijn du Bois", email = "quirijndubois@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["render", "physics", "simulation"]
requires-python = ">=3.9"
dependencies = ["numpy","pygame","svgpathtools","glfw","moderngl"]

[project.urls]
Homepage = "https://github.com/quirijndubois/phanim"
